// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PeselField/> input field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="id_code"
      >
        Pesel
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ kICbZw"
          id="testId"
          label="Pesel"
          name="id_code"
          placeholder="Pesel"
          value="2312"
        />
      </div>
      <span
        class="sc-ksluoS cNvzFC"
      >
        Podany PESEL jest nieprawidłowy
      </span>
    </div>
  </form>
</div>
`;

exports[`<PeselField/> matches snapshot 1`] = `
<input
  class="sc-hBMVcZ hoeMOd"
  id="testId"
  label="Pesel"
  name="id_code"
  placeholder="Pesel"
  value=""
/>
`;

exports[`<PeselField/> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="id_code"
      >
        Pesel*
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ kICbZw"
          id="testId"
          label="Pesel"
          name="id_code"
          placeholder="Pesel*"
          required=""
          value=""
        />
      </div>
      <span
        class="sc-ksluoS cNvzFC"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<PeselField/> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iCoHVE JvWob"
    id="testForm"
  >
    <div
      class="sc-kEqYlL dXeAFH"
    >
      <label
        for="id_code"
      >
        Pesel
      </label>
      <div
        class="sc-lmgQde krpvJC"
      >
        <input
          class="sc-hBMVcZ hoeMOd"
          id="testId"
          label="Pesel"
          name="id_code"
          placeholder="Pesel"
          value=""
        />
      </div>
    </div>
  </form>
</div>
`;
